Fix for layer list collapsed colors/arrow and matching bracket colors/styling

--- a/src/styles/_codemirror.scss
+++ b/src/styles/_codemirror.scss
@@ -57,8 +57,7 @@
 }
 
 .cm-s-maputnik .CodeMirror-matchingbracket {
-  // background: #ddd;
-  background: hsla(223, 12%, 35%, 1);
+  background: var(--maputnik-codemirror__matchingbracket, hsla(223, 12%, 35%, 1));
   color: $color-white !important;
 }
 
